# image-creator

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  postcss.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  icon-replacement.md  model-extensibility.md  release-process.md  user-guide.md
resources/models/: anima.json  registry.json
resources/prompts/: translation_anime_tags.txt
resources/runtime/: runtime.json
resources/workflows/: anima_base.json  anima_turbo.json
src/: App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsi
src-tauri/src/: app_state.rs  archive.rs  comfyui.rs  config_loader.rs  downloader.rs  fs_utils.rs  gallery.rs  generate.rs  gpu.rs  lib.rs  llm.rs  logs.rs  main.rs  settings.rs
src-tauri/src/comfyui/: client.rs  manager.rs  workflow.rs
src-tauri/src/gallery/: db.rs  storage.rs
src-tauri/src/llm/: client.rs  manager.rs  translator.rs
src/components/common/: BootGate.tsx  Layout.tsx  Sidebar.tsx
src/components/gallery/: GalleryDetailModal.tsx  GalleryItemCard.tsx
src/components/generation/: AdvancedMode.tsx  ComfyUIControl.tsx  GenerationProgressPanel.tsx  ImageResultsGrid.tsx  LlamaServerControl.tsx  ModeSwitch.tsx  SimpleMode.tsx  TurboLoraSetup.tsx
src/components/settings/: AboutTab.tsx  GeneralTab.tsx  ModelManagementTab.tsx
src/components/setup/: SetupWizard.tsx
src/components/setup/steps/: DataFolderStep.tsx  DownloadStep.tsx  GpuCheckStep.tsx  LicenseStep.tsx  SummaryStep.tsx  WelcomeStep.tsx
src/i18n/: en.ts  index.ts  ja.ts  useTranslation.ts
src/lib/: downloadPlanner.ts  format.ts  serverPreflight.ts  tauri.ts  useComfyUIWebSocket.ts
src/pages/: GalleryPage.tsx  GeneratePage.tsx  HelpPage.tsx  LogsPage.tsx  SettingsPage.tsx  SetupPage.tsx
src/stores/: appStore.ts  generationStore.ts
src/styles/: global.css
src/types/: index.ts
